# cosmo_viz

./: .gitignore  CMakeLists.txt  PLAN.md  SPH_PLAN.md  run_allgas.sh  run_build_fsps_gri.sh  run_composite_flyin_story.sh  run_gasonly.sh  run_hires.sh  run_orbit.sh  run_orbit_hires.sh  run_phase2.sh  run_render.sh  run_sph_d2_smoke.sh  run_sph_d3_io.sh  run_sph_density_snap158.sh  run_sph_dm.sh  run_sph_dm_snap158.sh  run_sph_dm_test1.sh  run_sph_dw_vlos.sh  run_sph_flyin_halo8.sh  run_sph_flyin_halo8_dm.sh  run_sph_flyin_halo8_gas.sh  run_sph_flyin_last.sh  run_sph_flyin_snap158.sh  run_sph_halo8_flyin_first_last.sh  run_sph_halo8_tune_frame.sh  run_sph_hii_col.sh  run_sph_image.sh  run_sph_metal_f0.sh  run_sph_metal_halo8.sh  run_sph_mw.sh  run_sph_mw_f0.sh  run_sph_orbit.sh  run_sph_orbit_encode.sh  run_sph_orbit_spiral.sh  run_sph_orbit_spiral_encode.sh  run_sph_orbit_test1.sh  run_sph_persp.sh  run_sph_persp_inside.sh  (+34 more)
config/: allgas_camera.yaml  allgas_grid.yaml  example_camera.yaml  example_grid.yaml  gasonly_camera.yaml  gasonly_grid.yaml  hires_camera.yaml  hires_grid.yaml  orbit_grid.yaml  phase2_camera.yaml  phase2_grid.yaml  subbox_camera.yaml  subbox_grid.yaml  test_camera.yaml  test_grid.yaml  zoom_grid.yaml  zoom_grid_10mpc_close.yaml  zoom_grid_10mpc_mid.yaml  zoom_grid_10mpc_t2.yaml  zoom_grid_10mpc_t4.yaml  zoom_grid_10mpc_t5.yaml  zoom_grid_10mpc_t6.yaml  zoom_grid_10mpc_wide.yaml  zoom_grid_close.yaml  zoom_grid_mid.yaml  zoom_grid_samey_close.yaml  zoom_grid_samey_mid.yaml  zoom_grid_samey_t2.yaml  zoom_grid_samey_t4.yaml  zoom_grid_samey_t5.yaml  zoom_grid_samey_t6.yaml  zoom_grid_samey_wide.yaml  zoom_grid_t2.yaml  zoom_grid_t4.yaml
python/: assemble_zoom_ladder.py  baryon_composite.py  build_cmap_cam02.py  build_fsps_gri_grid.py  build_fsps_ugr_grid.py  compare_sph_grid.py  composite_flyin_story.py  composite_phase_vol.py  composite_phases.py  composite_t_hue_rho_bright.py  lupton_rgb.py  orbit_frames.py  orbit_frames_sph.py  plot_density_matter_fade.py  plot_flyin_matter_fade.py  plot_illustris_style.py  plot_renaissance.py  plot_vmag.py  plot_vol_composite.py  plotter.py  stellar_flyin.py  stellar_trace.py  tune_metallicity_cmap.py  tune_metallicity_diverging.py  zoom_frames.py
src/common/: Box3.h  Config.cpp  Config.h  Constants.h  HDF5IO.cpp  HDF5IO.h  Kernel.cpp  Kernel.h  KernelLUT.cpp  KernelLUT.h  ShmArray.h  SmoothingLength.cpp  SmoothingLength.h  SnapshotReader.cpp  SnapshotReader.h  Vec3.h
src/gridder/: Depositor.cpp  Depositor.h  Grid.cpp  Grid.h  SmoothingLength.cpp  SmoothingLength.h  SnapshotReader.cpp  SnapshotReader.h  main.cpp
src/renderer/: Camera.cpp  Camera.h  GridReader.cpp  GridReader.h  ImageWriter.cpp  (+4 more)
test/: test_bvh.cpp  test_kernel_lut.cpp
(+11 files in other folders)
